--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@
 
 .users-feedback {
     padding:80px 0px;
-    background:#fff5d7;
+    background: linear-gradient(340deg, #fff5d7 55%, #fff 0% );
 }
 .user-review {
     text-align: center;
